tests/golden/expected/call_unknown_object.stdout.txt
Compile error: tests/fixtures/call_unknown_object.lamp:17: unknown object "nonexistent"
  17 |     show(nonexistent)
    |     ^
